ci(workflows): Add owner and repositories fields for GitHub App token action
Define `owner` and specific repositories across workflows for improved clarity and configuration consistency.

--- a/.github/workflows/examples-version.yml
+++ b/.github/workflows/examples-version.yml
@@ -33,6 +33,9 @@ jobs:
         with:
           app-id: ${{ steps.op-load-secret.outputs.gh_app_id }}
           private-key: ${{ steps.op-load-secret.outputs.gh_app_private_key }}
+          owner: gittools
+          repositories: |
+            actions
           permission-actions: write
           permission-contents: write
           permission-workflows: write
