--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -36,6 +36,9 @@ jobs:
         with:
           app-id: ${{ steps.op-load-secret.outputs.gh_app_id }}
           private-key: ${{ steps.op-load-secret.outputs.gh_app_private_key }}
+          owner: gittools
+          repositories: |
+            actions
           permission-actions: write
           permission-contents: write
           permission-workflows: write
@@ -79,9 +82,10 @@ jobs:
         with:
           app-id: ${{ steps.op-load-secret.outputs.gh_app_id }}
           private-key: ${{ steps.op-load-secret.outputs.gh_app_private_key }}
+          owner: gittools
           repositories: |
-            gittools/actions
-            gittools/actions-test
+            actions
+            actions-test
           permission-actions: write
           permission-contents: write
           permission-workflows: write
