--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,9 @@ jobs:
         with:
           app-id: ${{ steps.op-load-secret.outputs.gh_app_id }}
           private-key: ${{ steps.op-load-secret.outputs.gh_app_private_key }}
+          owner: gittools
+          repositories: |
+            actions
           permission-actions: write
           permission-contents: write
           permission-workflows: write
@@ -75,9 +78,10 @@ jobs:
         with:
           app-id: ${{ steps.op-load-secret.outputs.gh_app_id }}
           private-key: ${{ steps.op-load-secret.outputs.gh_app_private_key }}
+          owner: gittools
           repositories: |
-            gittools/actions
-            gittools/actions-test
+            actions
+            actions-test
           permission-actions: write
           permission-contents: write
           permission-workflows: write
