--- a/.github/workflows/gitversion-published.yml
+++ b/.github/workflows/gitversion-published.yml
@@ -33,6 +33,9 @@ jobs:
         with:
           app-id: ${{ steps.op-load-secret.outputs.gh_app_id }}
           private-key: ${{ steps.op-load-secret.outputs.gh_app_private_key }}
+          owner: gittools
+          repositories: |
+            actions
           permission-actions: write
           permission-contents: write
           permission-workflows: write
