ci(workflows): Update permissions in prerelease and release workflows
Remove `packages` and add `issues` permissions for better alignment with workflow requirements.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,8 +84,8 @@ jobs:
             actions-test
           permission-actions: write
           permission-contents: write
+          permission-issues: write
           permission-workflows: write
-          permission-packages: write
 
       - name: Update Release Notes
         uses: ./gitreleasemanager/create
