--- a/.github/workflows/examples-version.yml
+++ b/.github/workflows/examples-version.yml
@@ -56,6 +56,8 @@ jobs:
           dir -r .github\**\*.yml | % { update-files $_ -OldVersion $oldTag -NewVersion $newTag }
           dir -r .azure\**\*.yml  | % { update-files $_ -OldVersion $oldTag -NewVersion $newTag }
 
+          npm install --ignore-scripts
+
           git add --verbose .
           git config user.name 'gittools-bot'
           git config user.email 'gittoolsbot@outlook.com'
