--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,11 +138,8 @@ jobs:
         id: status
         run: |
           if ($null -ne (git status --porcelain)) { echo "has_changes=1"; echo "has_changes=1" >> $env:GITHUB_OUTPUT }
-      - name: Rebuild dist and push
-        run: |
-          git add --verbose .
-          git config user.name 'gittools-bot'
-          git config user.email 'gittoolsbot@outlook.com'
-          git commit -m 'dist update' --allow-empty
-          git push --force
+      - uses: ./.github/actions/git-commit-push
+        with:
+          message: 'dist update'
         if: steps.status.outputs.has_changes == '1'
+        name: Rebuild dist and push
