--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,46 +24,19 @@ defaults:
 
 jobs:
   build:
-
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ windows-2025, ubuntu-24.04, macos-26 ]
       fail-fast: false
     steps:
-
-      - name: Load secrets from 1Password
-        id: op-load-secret
-        uses: 1password/load-secrets-action@v3
+      - name: Auth and Checkout
+        id: auth_and_checkout
+        uses: gittools/cicd/auth-checkout@main
         if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         with:
-          export-env: false
-        env:
-          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
-          gh_app_id: op://gittools/actions/gh_app_id
-          gh_app_private_key: op://gittools/actions/gh_app_private_key.pem
-
-      - name: Generate GitHub App Token
-        id: app-token
-        uses: actions/create-github-app-token@v2
-        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
-        with:
-          owner: gittools
-          repositories: |
-            actions
-          app-id: ${{ steps.op-load-secret.outputs.gh_app_id }}
-          private-key: ${{ steps.op-load-secret.outputs.gh_app_private_key }}
-          permission-actions: write
-          permission-contents: write
-          permission-workflows: write
-          permission-members: read
-          permission-metadata: read
-
-      - uses: actions/checkout@v6
-        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
-        with:
+          op-token: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
           fetch-depth: 0
-          token: ${{ steps.app-token.outputs.token }}
 
       - uses: actions/checkout@v6
         if: github.event_name == 'pull_request'
